# plugin-casper-hermes

./: .env.example  README.md  TESTING.md  __init__.py  alerts.py  config.py  plugin.yaml  pyproject.toml  read_helpers.py  reads.py  requirements.txt  rpc.py  schemas.py  tools.py  transaction.py  tx_service.py  utils.py
scripts/: casper_client.py  package-lock.json  package.json  tx_runner.mjs
skills/casper/: SKILL.md
